packages/babylon/test/fixtures/esprima/invalid-syntax/.migrated_0167/actual.js
var source = '\u200D = []';
